# UVM-Testbench-Generator

./: .gitignore  CHANGELOG.md  GITHUB_DESCRIPTION.txt  LICENSE  README.md  USAGE.md  USER_GUIDE.md  pyproject.toml  requirements.txt  testbench_generator.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-pypi.yml  python-ci.yml
examples/sample_project/: README.md
examples/sample_project/src/: interface.sv  tb_pkg.sv
layout/: footer.py  header.py  sidebar.py
sections/: agent_class.py  dashboard.py  environment_class.py  interface_dut.py  preview.py  project_details.py  scoreboard_class.py  sequence_class.py  state_machine.py  test_class.py  top_module.py  transaction_class.py
utils/: generator.py  ui.py
uvm_testbench_generator/: app.py
uvm_testbench_generator/layout/: footer.py  header.py  sidebar.py
uvm_testbench_generator/sections/: agent_class.py  dashboard.py  environment_class.py  interface_dut.py  preview.py  project_details.py  scoreboard_class.py  sequence_class.py  state_machine.py  test_class.py  top_module.py  transaction_class.py
uvm_testbench_generator/utils/: paths.py  splashscreen.py  state.py  theme.py  verilog_parser.py  workflow.py
